--- a/library.properties
+++ b/library.properties
@@ -1,7 +1,8 @@
+name=HDC302x
 version=1.0.0
 author=Sander Schinkelshoek
 maintainer=Sander Schinkelshoek
-sentence=Libary for the TI Temperature/Humidity sensors HDC3020, HDC3021 and HDC3022 
+sentence=Libary for the TI Temperature and Humidity sensors HDC3020, HDC3021 and HDC3022 
 paragraph=The HDC302x is an integrated capacitive based relative humidity (RH) and temperature sensor. It provides high accuracy measurements
 category=Sensors
 url=https://github.com/SndrSchnklshk/HDC302x
