--- a/library.properties
+++ b/library.properties
@@ -2,9 +2,8 @@ name=HDC302x
 version=1.0.0
 author=Sander Schinkelshoek
 maintainer=Sander Schinkelshoek
-sentence=Library for the TI Temperature and Humidity sensors HDC3020, HDC3021 and HDC3022 
-paragraph=The HDC302x is an integrated capacitive based relative humidity (RH) and temperature sensor. It provides high accuracy measurements
+sentence=TI HDC3020, HDC3021 and HDC3022 Temperature/Humidity sensors 
+paragraph=HDC302x is an integrated capacitive based relative humidity (RH) and temperature sensor (HDC3020, HDC3021 and HDC3022)
 category=Sensors
 url=https://github.com/SndrSchnklshk/HDC302x
-architectures=mbed,mbed_nicla
-includes=HDC302x.h
+architectures=*
